umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_rh+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Rh#c+2#n3#u"] :bonds [] :charge 2 :spin "#u1#s2"}
    :success true}
  :counts {
    :output {:atoms ["Rh#c+2#n3#u"] :bonds [] :charge 2 :spin "#u1#s2"}
    :success true}}
