umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_ru+3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Ru#c+3#n2#u"] :bonds []} :success true}
  :counts {:output {:atoms ["Ru#c+3#n2#u"] :bonds []} :success true}}
