umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_s-2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["S#c-2#n4"] :bonds [] :charge -2 :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {:atoms ["S#c-2#n4"] :bonds [] :charge -2 :spin "#u0 #s1"}
    :success true}}
