umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_sb-3.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Sb#c-3#n4"] :bonds []} :success true}
  :counts {:output {:atoms ["Sb#c-3#n4"] :bonds []} :success true}}
