umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atomic_ions_sm+2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms ["Sm#c+2#u6"] :bonds [] :charge 2 :spin "#u6 #s7"}} :counts {:success true :output {:atoms ["Sm#c+2#n3"] :bonds [] :charge 2 :spin "#u0 #s1"}}}
